deploy/nginx-unprivileged.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-unprivileged
  name: nginx-unprivileged
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-unprivileged
  template:
    metadata:
      labels:
        app: nginx-unprivileged
    spec:

      volumes:
      - name: shared-data
        emptyDir: {}        

      containers:
      - image: pinpindock/nginx-unprivileged # https://hub.docker.com/r/pinpindock/nginx-unprivileged
        name: nginx-unprivileged
        ports:
        - containerPort: 1025
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
