deploy/nginx-unprivileged_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-unprivileged
  name: nginx-unprivileged
spec:
  ports:
  - name: HTTP
    port: 1025
    targetPort: 1025
    protocol: TCP
  selector:
    app: nginx-unprivileged
  type: ClusterIP
status:
  loadBalancer: {}
